# bevy2d

./: Cargo.toml  README.md
bevy2d/: Cargo.toml
bevy2d/src/: main.rs
bevy2d/src/components/: game.rs  mod.rs
bevy2d/src/events/: character.rs  mod.rs
bevy2d/src/resources/: game.rs  mod.rs  world.rs
bevy2d/src/states/: game.rs  gameover.rs  menu.rs  mod.rs  paused.rs
bevy2d/src/systems/: character.rs  debug.rs  mod.rs  world.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/components/: camera.rs  character.rs  debug.rs  mod.rs
core/src/resources/: button.rs  input.rs  mod.rs
core/src/states/: mod.rs
core/src/systems/: input.rs  mod.rs
src/: debug.rs  game.rs  main.rs
src/components/: camera.rs  character.rs  collider.rs  debug.rs  mod.rs  rigidbody.rs
src/core/: engine.rs  mod.rs
src/resources/: game.rs  mod.rs  world.rs
src/states/: game.rs
src/systems/: character.rs  collider.rs  debug.rs  mod.rs  physics.rs  world.rs
