[package]
name = "bevy2d"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4"
bevy_prototype_lyon = "0.2"
bevy_rapier2d = { version = "0.8", features = [ "simd-stable", "parallel", "serde-serialize" ] }
derivative = "2.2"
once_cell = "1.5"
