[package]
name = "bevy2d"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_egui = "0.11"
bevy-inspector-egui = "0.8"
# TODO: bevy-inspector-egui-rapier
bevy_prototype_lyon = "0.4"
bevy_rapier2d = { version = "0.12", features = [ "simd-stable", "parallel", "serde-serialize", "render" ] }
once_cell = "1.9"

[dependencies.core_lib]
path = "../core"
