[package]
name = "bevy2d"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_egui = "0.14"
bevy-inspector-egui = "0.11"
bevy-inspector-egui-rapier = { version = "0.3", features = ["rapier2d"] }
bevy_prototype_lyon = "0.5"
bevy_rapier2d = { version = "0.13", features = [ "simd-stable", "parallel", "serde-serialize", "debug-render" ] }

[dependencies.core_lib]
path = "../core"
