[package]
name = "bevy2d"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_egui = "0.15"
bevy-inspector-egui = "0.12"
bevy-inspector-egui-rapier = { version = "0.5", features = ["rapier2d"] }
bevy_prototype_lyon = "0.6"
bevy_rapier2d = { version = "0.16", features = [ "simd-stable", "parallel", "serde-serialize", "debug-render" ] }

[dependencies.core_lib]
path = "../core"
