[package]
name = "core_lib"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_rapier2d = { version = "0.12", features = [ "simd-stable", "parallel", "serde-serialize", "render" ] }
derivative = "2.2"
